fix config parsing